--- a/MIO/contact.html
+++ b/MIO/contact.html
@@ -18,6 +18,21 @@
             </div>
         </ul>
     </nav>
+    <h1 class="title">Contact Me</h1>
+    <p>Fill out the following form with your information, and I will contact you.</p>
+    <div class="card">
+       
+        <form class="cart">
+            <label for="name">Name:</label> <br>
+            <input type="text" id="name" name="name" placeholder="Your name"> <br>
+            <label for="email">Email address</label><br>
+            <input type="email" id="email" name="email" placeholder="example@gmail.com"> <br>
+            <label for="phone number">Number </label><br>
+            <input type="tel" id="=number" name="number" placeholder="30000xxxxx"><br>
+
+            <button class="butt" type="submit">Submit</button>
+        </form>
+    </div>
  
  
 </body>
