--- a/MIO/folderMe.html
+++ b/MIO/folderMe.html
@@ -11,11 +11,13 @@
     <nav class="navbar">
         <ul class="nav-links">
             <li class="home-icon"><a href="index.html" class="material-symbols-outlined">home</a></li>
-            <div class="center-links">
-                <li><a href="myself.html">About Me</a></li>
-                <li><a href="folderMe.html">Projects</a></li>
-                <li><a href="contact.html">Contact Me</a></li>
-            </div>
+            <li class="center-links">
+                <ul>
+                    <li><a href="myself.html">About Me</a></li>
+                    <li><a href="folderMe.html">Projects</a></li>
+                    <li><a href="contact.html">Contact Me</a></li>
+                </ul>
+            </li>
         </ul>
     </nav>
     <div class="title">
@@ -27,23 +29,26 @@
             <h3>Development TypeScript</h3>
             <p>This is a project designed for a hotel. It is based on hotel reservation management. 
                 It includes a CRUD for the administrator and a view of services only for the user.</p>
-            <button><a href="https://github.com/MayerlyZ/HOTEL-JIREH">git</a></button>
+            <a class="project-button" href="https://github.com/MayerlyZ/JIREH" target="_blank" rel="noopener">git</a>
+
         </div>
         <div>
             <h3>Development JavaScript</h3>
             <p>This is a project designed for a hotel. It is based on hotel reservation management. 
                 It includes a CRUD for the administrator and a view of services only for the user.</p>
-            <button><a href="https://github.com/MayerlyZ/DESARROLLO-WEB">git</a></button>
+            <a class="project-button" href="https://github.com/MayerlyZ/DESARROLLO-WEB" target="_blank" rel="noopener">git</a>
+
         </div>
         <div>
             <h3>Python Repository</h3>
             <p>In this repository, you can find multiple exercises developed in Python, 
                 using very simple functions that allow you to understand programming logic.</p>
-            <button><a href="https://github.com/MayerlyZ/MAYERLY-RIWI">git</a></button>
+            <a class="project-button" href="https://github.com/MayerlyZ/MAYERLY-RIWI" target="_blank" rel="noopener">git</a>
 
         </div>
        
     </div>
+
     
  
 </body>
