--- a/MIO/myself.html
+++ b/MIO/myself.html
@@ -11,11 +11,13 @@
     <nav class="navbar">
         <ul class="nav-links">
             <li class="home-icon"><a href="index.html" class="material-symbols-outlined">home</a></li>
-            <div class="center-links">
-                <li><a href="myself.html">About Me</a></li>
-                <li><a href="folderMe.html">Projects </a></li>
-                <li><a href="contact.html">Contact Me</a></li>
-            </div>
+            <li class="center-links">
+                <ul>
+                    <li><a href="myself.html">About Me</a></li>
+                    <li><a href="folderMe.html">Projects </a></li>
+                    <li><a href="contact.html">Contact Me</a></li>
+                </ul>
+            </li>
         </ul>
     </nav>
         
@@ -26,13 +28,13 @@
          </div>
         
                 <!-- Caja de texto a la derecha -->
-    <div class="card">
+    <div class="carta">
         <div>
-            <h2>About Me</h2>
+            <h2 class="letra">About Me</h2>
             <p>My name is Mayerly,I am a systems engineering student. I am passionate about programming and technology.
                  I am currently learning web development and I am excited to create my own projects. Web development and databases are quite interesting to me, 
                  in the future I hope to specialize in Data Science or Artificial Intelligence</p>
-            <h2>Approaches with languages, technologies or frameworks</h2>
+            <h4>Approaches with languages, technologies or frameworks</h4>
             <p>HTML, CSS, JavaScript, TypeScript, Python, Java, SQL, SpringBoot, React Js, Node.js, React Native</p>
         </div>
     </div>
