--- a/MIO/contact.html
+++ b/MIO/contact.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ing Mayerly</title>
+    <title>My Personal Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=home" />
+    <meta name="description" content="Personal Portfolio of Mayerly as a Riwi developer">
 </head>
 <body>
     <nav class="navbar">
@@ -18,12 +19,12 @@
             </div>
         </ul>
     </nav>
-    <h1 class="title">Contact Me</h1>
+    <h2 class="letter">Contact Me</h2>
     <p>Fill out the following form with your information, and I will contact you.</p>
     <div class="card">
        
         <form class="cart">
-            <label for="name">Name:</label> <br>
+            <label for="name">Name</label> <br>
             <input type="text" id="name" name="name" placeholder="Your name"> <br>
             <label for="email">Email address</label><br>
             <input type="email" id="email" name="email" placeholder="example@gmail.com"> <br>
