--- a/MIO/folderMe.html
+++ b/MIO/folderMe.html
@@ -1,55 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ing Mayerly</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=home" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>My Personal Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=home" />
 </head>
 <body>
-    <nav class="navbar">
-        <ul class="nav-links">
-            <li class="home-icon"><a href="index.html" class="material-symbols-outlined">home</a></li>
-            <li class="center-links">
-                <ul>
-                    <li><a href="myself.html">About Me</a></li>
-                    <li><a href="folderMe.html">Projects</a></li>
-                    <li><a href="contact.html">Contact Me</a></li>
-                </ul>
-            </li>
+  <nav class="navbar">
+    <ul class="nav-links">
+      <li class="home-icon"><a href="index.html" class="material-symbols-outlined">home</a></li>
+      <li class="center-links">
+        <ul>
+          <li><a href="myself.html">About Me</a></li>
+          <li><a href="folderMe.html">Projects</a></li>
+          <li><a href="contact.html">Contact Me</a></li>
         </ul>
-    </nav>
-    <div class="title">
-        <h2>My Projects</h2>
-    </div>
+      </li>
+    </ul>
+  </nav>
 
-    <div class="card">
-        <div>
-            <h3>Development TypeScript</h3>
-            <p>This is a project designed for a hotel. It is based on hotel reservation management. 
-                It includes a CRUD for the administrator and a view of services only for the user.</p>
-            <a class="project-button" href="https://github.com/MayerlyZ/JIREH" target="_blank" rel="noopener">git</a>
+  <div class="title">
+    <h2>My Projects</h2>
+  </div>
 
+  <!-- Tabla con estilo de tarjetas -->
+<section>
+
+
+  <table class="cards-table">
+    <tr>
+      <td>
+        <div class="card-content">
+          <h3>Development TypeScript</h3>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/Typescript_logo_2020.svg/1200px-Typescript_logo_2020.svg.png" alt="TypeScript" width="200px">
+          <p>This is a project designed for a hotel. It is based on hotel reservation management. 
+            It includes a CRUD for the administrator and a view of services only for the user.</p>
+          <a class="project-button" href="https://github.com/MayerlyZ/JIREH" target="_blank">git</a>
         </div>
-        <div>
-            <h3>Development JavaScript</h3>
-            <p>This is a project designed for a hotel. It is based on hotel reservation management. 
-                It includes a CRUD for the administrator and a view of services only for the user.</p>
-            <a class="project-button" href="https://github.com/MayerlyZ/DESARROLLO-WEB" target="_blank" rel="noopener">git</a>
-
+      </td>
+      <td>
+        <div class="card-content">
+          <h3>Development JavaScript</h3>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Unofficial_JavaScript_logo_2.svg/1200px-Unofficial_JavaScript_logo_2.svg.png" alt="JavaScript" width="200px">
+          <p>This is a project designed for a hotel. It is based on hotel reservation management. 
+            It includes a CRUD for the administrator and a view of services only for the user.</p>
+          <a class="project-button" href="https://github.com/MayerlyZ/DESARROLLO-WEB" target="_blank">git</a>
         </div>
-        <div>
-            <h3>Python Repository</h3>
-            <p>In this repository, you can find multiple exercises developed in Python, 
-                using very simple functions that allow you to understand programming logic.</p>
-            <a class="project-button" href="https://github.com/MayerlyZ/MAYERLY-RIWI" target="_blank" rel="noopener">git</a>
-
+      </td>
+      <td>
+        <div class="card-content">
+          <h3>Python Repository</h3>
+          <img src="https://raw.githubusercontent.com/docker-library/docs/01c12653951b2fe592c1f93a13b4e289ada0e3a1/python/logo.png" alt="Python" width="200px">
+          <p>In this repository, you can find multiple exercises developed in Python, 
+            using very simple functions that allow you to understand programming logic.</p>
+          <a class="project-button" href="https://github.com/MayerlyZ/MAYERLY-RIWI" target="_blank">git</a>
         </div>
-       
-    </div>
-
-    
- 
+      </td>
+    </tr>
+  </table>
+</section>
 </body>
 </html>
