--- a/MIO/index.html
+++ b/MIO/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ing Mayerly</title>
+    <title>My Personal Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=home" />
 </head>
@@ -20,13 +20,11 @@
     </nav>
    <div class="background"></div>
    <div class="content">
-    <h1>
-        Coder in  <br>Progress
-
-    </h1>
+    <h1> Mayerly Zapata  <br>Riwi Developer</h1>
     
     <button class="botton"> <a href="https://github.com/MayerlyZ?tab=repositories" target="_blank" rel="noopener"> Repository Git</a></button>
-   </div>
+   
+   
  
 </body>
 </html>
