--- a/MIO/contact.html
+++ b/MIO/contact.html
@@ -1,40 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=home" />
-    <meta name="description" content="Personal Portfolio of Mayerly as a Riwi developer">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Contact Me</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
+  <meta name="description" content="Personal Portfolio of Mayerly as a Riwi developer">
 </head>
 <body>
-    <nav class="navbar">
-        <ul class="nav-links">
-            <li class="home-icon"><a href="index.html" class="material-symbols-outlined">home</a></li>
-            <div class="center-links">
-                <li><a href="myself.html">About Me</a></li>
-                <li><a href="folderMe.html">Projects</a></li>
-                <li><a href="contact.html">Contact Me</a></li>
-            </div>
-        </ul>
-    </nav>
-    <h2 class="letter">Contact Me</h2>
-    <p>Fill out the following form with your information, and I will contact you.</p>
-    <div class="card">
-       
-        <form class="cart">
-            <label for="name">Name</label> <br>
-            <input type="text" id="name" name="name" placeholder="Your name"> <br>
-            <label for="email">Email address</label><br>
-            <input type="email" id="email" name="email" placeholder="example@gmail.com"> <br>
-            <label for="phone number">Number </label><br>
-            <input type="tel" id="=number" name="number" placeholder="30000xxxxx"><br>
+  <nav class="navbar">
+    <ul class="nav-links">
+      <li class="home-icon"><a href="index.html" class="material-symbols-outlined">home</a></li>
+      <div class="center-links">
+        <li><a href="myself.html">About Me</a></li>
+        <li><a href="folderMe.html">Projects</a></li>
+        <li><a href="contact.html">Contact Me</a></li>
+      </div>
+    </ul>
+  </nav>
 
-            <button class="butt" type="submit">Submit</button>
-        </form>
-    </div>
+  <h2 class="letter">Contact Me</h2>
  
- 
+  <div class="card">
+    <form class="cart">
+      <label for="name">Name</label><br>
+      <input type="text" id="name" name="name" placeholder="Your name"><br>
+      <label for="email">Email address</label><br>
+      <input type="email" id="email" name="email" placeholder="example@gmail.com"><br>
+      <label for="number">Number</label><br>
+      <input type="tel" id="number" name="number" placeholder="30000xxxxx"><br>
+      <button class="butt" type="submit">Submit</button>
+    </form>
+  </div>
 </body>
 </html>
