--- a/MIO/index.html
+++ b/MIO/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=home" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>My Personal Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
 </head>
 <body>
-    <nav class="navbar">
-        <ul class="nav-links">
-            <li class="home-icon"><a href="index.html" class="material-symbols-outlined">home</a></li>
-            <div class="center-links">
-                <li><a href="myself.html">About Me</a></li>
-                <li><a href="folderMe.html">Projects</a></li>
-                <li><a href="contact.html">Contact Me</a></li>
-            </div>
-        </ul>
-    </nav>
-   <div class="background"></div>
-   <div class="content">
-    <h1> Mayerly Zapata  <br>Riwi Developer</h1>
-    
-    <button class="botton"> <a href="https://github.com/MayerlyZ?tab=repositories" target="_blank" rel="noopener"> Repository Git</a></button>
-   
-   
- 
+  <nav class="navbar">
+    <ul class="nav-links">
+      <li class="home-icon"><a href="index.html" class="material-symbols-outlined">home</a></li>
+      <div class="center-links">
+        <li><a href="myself.html">About Me</a></li>
+        <li><a href="folderMe.html">Projects</a></li>
+        <li><a href="contact.html">Contact Me</a></li>
+      </div>
+    </ul>
+  </nav>
+
+  <div class="background"></div>
+  <div class="content">
+    <h1>Mayerly Zapata<br>Riwi Developer</h1>
+    <button class="button">
+      <a href="https://github.com/MayerlyZ?tab=repositories" target="_blank" rel="noopener">Repository Git</a>
+    </button>
+  </div>
 </body>
 </html>
